crates/service/tests/document_highlight/snapshots/features__document_highlight__shape_descriptor.snap
---
source: crates/service/tests/document_highlight/mod.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 3,
        "character": 15
      },
      "end": {
        "line": 3,
        "character": 20
      }
    },
    "kind": 1
  },
  {
    "range": {
      "start": {
        "line": 4,
        "character": 15
      },
      "end": {
        "line": 4,
        "character": 20
      }
    },
    "kind": 1
  }
]
