crates/service/tests/document_highlight/snapshots/features__document_highlight__table_ref_ident.snap
---
source: crates/service/tests/document_highlight/mod.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 2,
        "character": 9
      },
      "end": {
        "line": 2,
        "character": 11
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 4,
        "character": 15
      },
      "end": {
        "line": 4,
        "character": 16
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 4,
        "character": 29
      },
      "end": {
        "line": 4,
        "character": 31
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 5,
        "character": 15
      },
      "end": {
        "line": 5,
        "character": 16
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 5,
        "character": 29
      },
      "end": {
        "line": 5,
        "character": 31
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 6,
        "character": 16
      },
      "end": {
        "line": 6,
        "character": 17
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 6,
        "character": 31
      },
      "end": {
        "line": 6,
        "character": 33
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 8,
        "character": 16
      },
      "end": {
        "line": 8,
        "character": 17
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 8,
        "character": 31
      },
      "end": {
        "line": 8,
        "character": 33
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 9,
        "character": 16
      },
      "end": {
        "line": 9,
        "character": 17
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 9,
        "character": 31
      },
      "end": {
        "line": 9,
        "character": 33
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 10,
        "character": 16
      },
      "end": {
        "line": 10,
        "character": 17
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 10,
        "character": 18
      },
      "end": {
        "line": 10,
        "character": 20
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 10,
        "character": 34
      },
      "end": {
        "line": 10,
        "character": 36
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 10,
        "character": 37
      },
      "end": {
        "line": 10,
        "character": 38
      }
    },
    "kind": 2
  }
]
