crates/service/tests/document_highlight/snapshots/features__document_highlight__tag_ref_int.snap
---
source: crates/service/tests/document_highlight/mod.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 2,
        "character": 7
      },
      "end": {
        "line": 2,
        "character": 9
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 4,
        "character": 21
      },
      "end": {
        "line": 4,
        "character": 22
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 5,
        "character": 12
      },
      "end": {
        "line": 5,
        "character": 13
      }
    },
    "kind": 2
  }
]
