crates/service/tests/document_highlight/snapshots/features__document_highlight__type_use_int.snap
---
source: crates/service/tests/document_highlight/mod.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 2,
        "character": 8
      },
      "end": {
        "line": 2,
        "character": 10
      }
    },
    "kind": 3
  },
  {
    "range": {
      "start": {
        "line": 3,
        "character": 14
      },
      "end": {
        "line": 3,
        "character": 15
      }
    },
    "kind": 2
  },
  {
    "range": {
      "start": {
        "line": 4,
        "character": 14
      },
      "end": {
        "line": 4,
        "character": 16
      }
    },
    "kind": 2
  }
]
