crates/service/tests/document_highlight/snapshots/features__document_highlight__vec_type.snap
---
source: crates/service/tests/document_highlight/mod.rs
expression: response
---
[
  {
    "range": {
      "start": {
        "line": 2,
        "character": 21
      },
      "end": {
        "line": 2,
        "character": 25
      }
    },
    "kind": 1
  },
  {
    "range": {
      "start": {
        "line": 3,
        "character": 21
      },
      "end": {
        "line": 3,
        "character": 25
      }
    },
    "kind": 1
  }
]
